// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReBottomSheet component should render with required props 1`] = `
<ReDialog-stub
  class="__CLASS__"
  classdialog="re-bottom-sheet,__CONTENT-CLASS__"
  overlay="true"
  overlayclose="true"
  size="fullwidth"
  transition="slide-bottom"
  verticalalign="bottom"
>
  <header
    class="re-bottom-sheet__header"
  >
    <span
      class="re-bottom-sheet__close"
      tabindex="0"
    >
      <icclose-stub
        additionalclass=""
        class="re-bottom-sheet__close-icon"
      />
    </span>

    <div
      class="re-bottom-sheet__title-container"
    >
      <h2
        class="re-bottom-sheet__title"
      >

          __TITLE__

      </h2>
    </div>

    <!---->
  </header>

  <hr
    class="re-bottom-sheet__divider re-bottom-sheet__divider--header"
  />

  <main
    class="re-bottom-sheet__content"
  >
    __MODAL-CONTENT__
  </main>

  <!---->
</ReDialog-stub>
`;

exports[`ReBottomSheet component using custom slots 1`] = `
<ReDialog-stub
  class="__CLASS__"
  classdialog="re-bottom-sheet,__CONTENT-CLASS__"
  overlay="true"
  overlayclose="true"
  size="fullwidth"
  transition="slide-bottom"
  verticalalign="bottom"
>
  <header
    class="re-bottom-sheet__header re-bottom-sheet__header--with-actions"
  >
    <span
      class="re-bottom-sheet__close"
      tabindex="0"
    >
      <button>
        __CLOSE__
      </button>
    </span>

    <div
      class="re-bottom-sheet__title-container"
    >
      <h2>
        __TITLE__
      </h2>
    </div>

    <span
      class="re-bottom-sheet__action"
      tabindex="0"
    >
      <button>
        __ACTION__
      </button>
    </span>
  </header>

  <hr
    class="re-bottom-sheet__divider re-bottom-sheet__divider--header"
  />

  <main
    class="re-bottom-sheet__content"
  >
    __MODAL-CONTENT__
  </main>

  <div
    class="re-bottom-sheet__footer"
  >
    <div>
      __FOOTER__
    </div>
  </div>
</ReDialog-stub>
`;
